Bug 1234409: Give percentage positions to the dummy transparent color-stops that we use to pad CSS -webkit-gradient() expressions. r=heycam DONTBUILD because backed out & re-landed just to fix bug number