layout/style/test/property_database.js
@@ -684,6 +684,7 @@ if (IsCSSPropertyPrefEnabled("layout.css.prefixes.webkit")) {
 
     // radial w/ no color stops (valid) and a several different radius values:
     "-webkit-gradient(radial, 1 2, 8, 3 4, 9)",
+    "-webkit-gradient(radial, 0 0, 10, 0 0, 5)",
     "-webkit-gradient(radial, 1 2, -1.5, center center, +99999.9999)",
 
     // radial w/ color stops
